# python-constyle

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: automerge.yml  docs-and-format.yml  docs_and_format.yml  dummy_tests.yml  publish.yml  tests.yml
conda-recipe/: meta.yaml
constyle/: __init__.py  __main__.py  _attributes.py  _style.py  custom_colours.py
docs/: index.html
docs/constyle/: custom_colours.html  index.html
tests/: test_cli.py  test_constyle.py
